# freva-nextgen

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  APIRef.html  Attributes.html  CHANGELOG.md  Databrowser.html  Dockerfile  Facets.html  IntakeCatalogue.html  LICENSE  Makefile  README.md  api_config.toml  code-of-conduct.html  genindex.html  http-routingtable.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  run_server.py  search.html  searchindex.js  sitemap.xml  whatsnew.html
.github/: dependabot.yml  ghcr-readme
_sources/: APIRef.rst.txt  Attributes.rst.txt  Facets.rst.txt  index.rst.txt  whatsnew.rst.txt
_static/: documentation_options.js  switcher.json
auth/: app_example.html  auth-lib.html  endpoints.html  index.html
databrowser/: APIRef.html  cli.html  index.html  python-lib.html
databrowser-api/: pyproject.toml
databrowser-api/src/databrowser_api/: cli.py  core.py  run.py
databrowser-api/src/databrowser_api/tests/: conftest.py  test_cli.py  test_client.py  test_config.py
databrowser-client/: pyproject.toml
databrowser-client/assets/share/freva/: freva.conf
databrowser-client/src/: __init__.py
databrowser-client/src/freva_databrowser/: __init__.py  cli_utils.py  databrowser_cli.py  logger.py  query.py  utils.py
databrowser-client/src/freva_databrowser/tests/: conftest.py  test_cli.py  test_databrowser.py  test_url.py
dev-env/: api_config.toml  check-container.py  create-user.sh  create_cores.sh  docker-compose-without-solr-mongo.yaml  docker-compose.yaml  entrypoint.sh  envrc  freva.toml  ingest_stac_metadata.py  keys.py  redis-cmd.sh  release.py  static-managed-schema.xml
developers/: auth.html  auth_example.html  databrowser.html  index.html  stac.html  userdata.html  zarr.html
docker-scripts/: data-loader-worker-env.sh  entrypoint.sh  freva-rest-server-env.sh
docs/: environment.yml  requirements.txt
examples/: LoadData.ipynb
freva-client/: README.md  pyproject.toml
freva-client/src/freva_client/: __init__.py  __main__.py  _version.py  auth.py  query.py  zarr_utils.py
freva-client/src/freva_client/cli/: __init__.py  auth_cli.py  cli_app.py  cli_parser.py  cli_utils.py  databrowser_cli.py  zarr_cli.py
freva-client/src/freva_client/utils/: __init__.py  auth_utils.py  databrowser_utils.py  logger.py  types.py
freva-client/src/freva_databrowser/: __init__.py  __main__.py  _version.py  cli_utils.py  databrowser_cli.py  logger.py  query.py  utils.py
freva-client/src/freva_databrowser/tests/: conftest.py  test_cli.py  test_databrowser.py  test_url.py
freva-data-portal/: pyproject.toml
freva-data-portal-worker/: Dockerfile  README.md  dask-worker.service  data-loader  pyproject.toml
freva-data-portal-worker/docker-scripts/: entrypoint.sh
freva-data-portal-worker/src/data_portal_worker/: __init__.py  __main__.py  _cache_manager.py  _version.py  aggregator.py  cli.py  load_data.py  rechunker.py  sanitizer.py  utils.py  zarr_utils.py
freva-data-portal-worker/src/data_portal_worker/backends/: __init__.py  backend.py  cloud.py  posix.py  posix_and_cloud.py
freva-data-portal/src/freva_data_portal/: __init__.py  load_data.py  utils.py
freva-data-portal/src/freva_data_portal/backends/: posix.py
freva-plugin-api/: input_params.toml  parse_toml_to_model.ipynb
freva-rest/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
freva-rest/docker-scripts/: entrypoint.sh  follow  logging.sh  utils.sh
freva-rest/src/databrowser_api/: core.py  endpoints.py  load_data.py  run.py  schema.py
freva-rest/src/databrowser_api/mock/: files.json  latest.json
freva-rest/src/databrowser_api/tests/: conftest.py  test_client.py
freva-rest/src/databrowser_api/tests/mock/: __init__.py  files.json  latest.json
freva-rest/src/freva_data_portal/: cluster.py  endpoints.py  load_data.py
freva-rest/src/freva_data_portal/data-portal-worker/: __main__.py  load_data.py  requirements.txt
freva-rest/src/freva_rest/: __init__.py  api.py  api_config.toml  auth.py  cli.py  config.py  db.py  exceptions.py  logger.py  presign.py  rest.py  utils.py
freva-rest/src/freva_rest/auth/: __init__.py  oauth2.py  presign.py  session_store.py  token_issuer.py
freva-rest/src/freva_rest/databrowser_api/: __init__.py  core.py  endpoints.py  schema.py  stac.py
freva-rest/src/freva_rest/databrowser_api/backends/: __init__.py  base.py  rdbms.py  search_engine.py  solr.py
freva-rest/src/freva_rest/databrowser_api/mock/: __init__.py  files.json  latest.json  static.json
freva-rest/src/freva_rest/databrowser_api/mock/data/model/: orog_EUR-11_EC-Earth-Consortium-EC-Earth3-Veg_historical_r0i0p0_CLMcom-BTU-ICON-2-6-5-rc_v1_fx.nc
freva-rest/src/freva_rest/databrowser_api/services/: __init__.py  translator.py
freva-rest/src/freva_rest/databrowser_api/translation/: __init__.py  translator.py
freva-rest/src/freva_rest/databrowser_api/utils/: __init__.py  query_utils.py
freva-rest/src/freva_rest/freva_data_portal/: __init__.py  endpoints.py  schema.py  utils.py
freva-rest/src/freva_rest/stac_api/: __init__.py  core.py  endpoints.py  schema.py  search_engine.py
freva-rest/src/freva_rest/tests/: test_cli.py  test_config.py
freva-rest/src/freva_rest/tool_api/: db.py  endpoints.py  internal_endpoints.py  parse_config.py  schemas.py  tool_abstract.py  utils.py
freva-rest/src/freva_rest/utils/: base_utils.py  exceptions.py  namegenerator.py  presign_utils.py  stac_utils.py  stats_utils.py
freva-rest/src/tool_api/: endpoints.py  input_parameters.py  parse_config.py  tool_abstract.py
stacapi/: index.html
tests/: conftest.py  test__userdata.py  test_auth.py  test_authflows.py  test_cli.py  test_client.py  test_config.py  test_data_loader.py  test_databrowser_cli.py  test_databrowser_py.py  test_databrowser_restapi.py  test_load_zarr.py  test_load_zarr_restapi.py  test_misc.py  test_query_data_restapi.py  test_stacapi.py  test_tool_add.py  test_tool_change.py  test_tool_utils.py  test_url.py  test_userdata.py  test_utils.py  test_zarr_aggregator.py  test_zarr_client.py  test_zarr_generic_invalid_key.py  test_zarr_utils.py
(+103 files in other folders)
