[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"
[project]
name = "databrowser"
description = "RestAPI for searching for climate data based on key-value pairs"
authors = [{name = "DKRZ, Clint", email = "freva@dkrz.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
               "Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: POSIX :: Linux",
               "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
"aiohttp",
"fastapi",
"typer",
"uvicorn",
"python-dotenv",
"python-dateutil",
"tomli",
"rich",
"motor",
"requests",
]
[project.urls]
Documentation = "https://freva-clint.github.io/databrowserAPI"
Issues = "https://github.com/FREVA-CLINT/databrowserAPI/issues"
Source = "https://github.com/FREVA-CLINT/databrowserAPI/"

[tool.pytest.ini_options]
env = [
    "MONGO_HOST=localhost:27017",
    "MONGO_DB=search_stats",
    "MONGO_USER=mongo",
    "MONGO_PASSWORD=secret",
    "SOLR_HOST=localhost:8983",
    "SOLR_CORE=files"
]

[project.optional-dependencies]
dev = [ "tox-battery", "flit"]

[tool.flake8]
ignore = "F405"

[tool.mypy]
files = "src/databrowser"
strict = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
install_types = true
non_interactive = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
ignore_missing_imports = true

[package-data]
freva_storage_service = ["py.typed"]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = types, lint, test
[testenv]
parallel_show_output = false
[testenv:test]
deps = -e .
       httpx
       pytest
       pytest-asyncio
       pytest-cov
       pytest-mock
       mock
       pymongo
       pytest-env

commands =
    pytest -vv --cov=src --cov-report=html:coverage_report --junitxml report.xml --cov-report xml src/databrowser/tests
    python3 -m coverage report --fail-under=98.5 --precision=2
[testenv:docs]
deps = .
       sphinx-code-tabs
       sphinx-copybutton
       sphinxcontrib-httpdomain
       pydata-sphinx-theme
commands = make -C docs clean
           make -C docs html
[testenv:lint]
deps = .
       black
       isort
       flake8
       pytest-stub
commands =
    isort --check --profile black -t py311 -l 79 src
    flake8 src/databrowser --count --max-complexity=8 --ignore=F405,W503 --max-line-length=88 --statistics --show-source
[testenv:types]
deps = .
       mypy
       motor-stubs
       pytest-stub
commands = mypy --install-types --non-interactive
[testenv:tag]
deps = git-python
       packaging
       tomli
commands = python3 dev-env/release.py tag databrowser -b main
"""
