[build-system]
requires = ["setuptools>=61.0", "appdirs", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "freva-client"
description = "Search for climate data based on key-value pairs"
authors = [{name = "DKRZ, Clint", email = "freva@dkrz.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
               "Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: POSIX :: Linux",
               "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
"appdirs",
"pyyaml",
"requests",
"rich",
"tomli",
"typer",
]
[project.scripts]
freva-databrowser = "freva_databrowser:databrowser_cli.app"
[project.urls]
Documentation = "https://freva-clint.github.io/databrowserAPI"
Issues = "https://github.com/FREVA-CLINT/databrowserAPI/issues"
Source = "https://github.com/FREVA-CLINT/databrowserAPI/"

[project.optional-dependencies]
dev = ["tox"]

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.dynamic]
version = {attr = "freva_client.__version__"}
