[build-system]
requires = ["flit_core >=3.2", "appdirs"]
build-backend = "flit_core.buildapi"
[project]
name = "freva-client"
dynamic = ["version"]
description = "Search for climate data based on key-value pairs"
authors = [{name = "DKRZ, Clint", email = "freva@dkrz.de"}]
readme = "README.md"
classifiers = [
               "Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: POSIX :: Linux",
               "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
"appdirs",
"pyyaml",
"requests",
"rich",
"tomli",
"typer",
]
[project.scripts]
freva-client = "freva_client:cli.app"
[project.urls]
Documentation = "https://freva-clint.github.io/databrowserAPI"
Issues = "https://github.com/FREVA-CLINT/databrowserAPI/issues"
Source = "https://github.com/FREVA-CLINT/databrowserAPI/"

[project.optional-dependencies]
dev = ["tox"]

[tool.flit.sdist]
include = ["assets/*"]

[tool.flit.external-data]
directory = "assets"
[package-data]
freva_deployment = ["py.typed"]
