[build-system]
requires = ["flit_core >=3.2", "appdirs"]
build-backend = "flit_core.buildapi"
[project]
name = "freva-data-portal"
dynamic = ["version"]
description = "Search for climate data based on key-value pairs"
authors = [{name = "DKRZ, Clint", email = "freva@dkrz.de"}]
readme = "README.md"
classifiers = [
               "Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: POSIX :: Linux",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
"appdirs",
"cloudpickle",
"dask-distributed",
"redis",
"pika",
"xarray",
"zarr",
"xpublish",
"requests",
"typer",
]
[project.scripts]
freva-client = "freva_data_portal:data_loader"
[project.urls]
Documentation = "https://freva-clint.github.io/freva-nextgen"
Issues = "https://github.com/FREVA-CLINT/freva-nextgen/issues"
Source = "https://github.com/FREVA-CLINT/freva-nextgen/"

[project.optional-dependencies]
dev = ["tox"]

[package-data]
freva_data_portal = ["py.typed"]
