[build-system]
requires = ["flit_core >=3.2", "appdirs"]
build-backend = "flit_core.buildapi"
[project]
name = "freva-rest"
description = "RestAPI the free evaluation system, freva"
authors = [{name = "DKRZ, Clint", email = "freva@dkrz.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
               "Development Status :: 4 - Beta",
               "Environment :: Console",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: POSIX :: Linux",
               "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
"aiohttp",
"email-validator",
"fastapi",
"fastapi-third-party-auth",
"dask",
"pyjwt",
"uvicorn",
"python-dotenv",
"python-dateutil",
"python-multipart",
"tomli",
"rich",
"rich-argparse",
"motor",
"requests",
"redis",
"pika",
"paramiko",
"watchfiles",
"uuid",
"typing_extensions",
"zarr==2.18.2",
"pystac",
"httpx",
]
[project.scripts]
freva-rest-server = "freva_rest.cli:cli"
[project.urls]
Documentation = "https://freva-clint.github.io/freva-nextgen"
Issues = "https://github.com/FREVA-CLINT/freva-nextgen/issues"
Source = "https://github.com/FREVA-CLINT/freva-nextgen/"

[project.optional-dependencies]
dev = ["tox", "cryptography", "intake-esm"]
tests = ["xarray",
         "intake-esm",
         "pytest",
         "pytest-env",
         "httpx",
         "mock",
         "pytest-mock",
         "pytest-cov",
         ]

[package-data]
freva_rest = ["py.typed", "*.toml", "*.ico", "mock/*.json"]
